# DSA_grou_project_3

./: .README.md.un~  README.md  README.md~
Dictionary/: CMakeLists.txt  main.c
Dictionary/Array/: Array.c  Array.h
Dictionary/BinarySearchTree/: BinarySearchTree.c  BinarySearchTree.h
Dictionary/HashTable/: HashTable.c  HashTable.h
Dictionary/Heap/: Heap.c  Heap.h
Dictionary/LinkedList/: LinkedList.c  LinkedList.h
Dictionary/Menu/: Menu.c  Menu.h
Dictionary/Utils/: Utils.c  Utils.h
Dictionary/Word/: Word.c  Word.h
